--- a/요구사항1정리노트1.md
+++ b/요구사항1정리노트1.md
@@ -153,21 +153,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class HttpRequestUtils {
-    /**
-     * @param queryString은
-     *            URL에서 ? 이후에 전달되는 field1=value1&field2=value2 형식임
-     * @return
-     */
-    public static Map<String, String> parseQueryString(String queryString) {
-        return parseValues(queryString, "&");
-    }
-
-    /**
-     * @param 쿠키
-     *            값은 name1=value1; name2=value2 형식임
-     * @return
-     */
-
     public static final Logger log = LoggerFactory.getLogger(HttpRequestUtils.class);
     public static String getUrl(String firstLine){
         String [] splited = firstLine.split(" ");
@@ -185,3 +170,137 @@ public class HttpRequestUtils {
 
 ```
 
+※ Util 클래스란?
+여러 클래스에서 공통적으로 사용되는 메서드를 모아서 클래스로 만드는 것
+
+## 요구사항 1-2  GET 방식으로 회원가입 하기 단 db 연동을 안하므로 응답은 302 status code
+- http://localhost:8080/user/form.html에서 회원가입을 한다. 회원가입 폼에 넣은 사용자 정보는 model.User클래스에 저장한다
+- 회원 가입을 완료하면 /user/create로 넘어가게 된다. 하지만 /user/create/에 대해서는 응답으로 전달할 파일이 없기 때문에 /index.html 페이지로 이동한다.
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/f1f53c40-e583-4627-8904-512178077d26)
+
+
+http://localhost:8080/user/form.html 에서 회원가입 폼에 사용자 정보를 입력하고 전송을 누르면
+GET 방식으로 http 요청이 만들어진다.
+
+```
+GET /user/create?userID=testID&password=testPW&name=testName&email=test%40test HTTP/1.1
+```
+
+? 뒤에 오는 사용자 정보는 추출하여 model.User 클래스에 저장한다 <br>
+
+그리고 HTTP 요청을 보면 알겠지만 우선 /user/create가 있는지 찾아야 한다. 하지만 /user/create로는 응답할 페이지가 없기 때문에 
+리다이렉트 하는 코드를 작성해주어야 한다 리다이렉트 하는 상황에 대한 302 헤더도 클라이언트로 보내야 한다. 해당 부분은 RequestHandler.java에서 구현해주었다
+
+- RequestHandler.java
+```
+package webserver;
+
+import model.User;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import util.HttpRequestUtils;
+
+import java.io.*;
+import java.net.Socket;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+
+public class RequestHandler extends Thread{
+    private static final Logger log = LoggerFactory.getLogger(RequestHandler.class);
+    private Socket connection;
+    public RequestHandler(Socket connectionSocket){
+        this.connection=connectionSocket;
+    }
+
+    @Override
+    public void run(){
+        log.debug("New Client Connect! Connected IP {}, PORT : {}",connection.getInetAddress(),connection.getPort());
+        try(InputStream in = connection.getInputStream();
+            OutputStream out = connection.getOutputStream())
+        {
+            InputStreamReader isr = new InputStreamReader(in,"UTF-8");
+            BufferedReader br = new BufferedReader(isr);
+            String url = HttpRequestUtils.getUrl(br.readLine());
+            int index = url.indexOf("?");              //url 유저정보 파라미터를 분리하기 위해 ?의 인덱스를 저장한다
+            String requestPath;
+            String defaultPath="/index.html";        //redirect 할 defaultPath로 index.html
+            String params;
+            if (index==-1){                //indexOf는 해당 문자에 대한 index를 찾을 수 없으면 -1을 반환한다
+             requestPath=url;
+             params="";
+            }
+            else {
+                requestPath = url.substring(0, index);    //? 앞부분 추출 즉 /user/create
+                params = url.substring(index + 1);
+            }
+            DataOutputStream dos = new DataOutputStream(out);
+            if (Files.exists( Paths.get("./webapp"+requestPath))){ //요청한 웹페이지에 해당하는 파일이 있다면
+            byte[] body = Files.readAllBytes(new File("./webapp"+requestPath).toPath());
+            urlFunction(requestPath,dos,params,body);    //웹 url에 따라 다른 기능을 수행하기 위함
+            }
+            else{                                         //없는 경우 기본 페이지인 index.html 페이지를 응답으로 보낸다
+                log.debug("defaultPath{}",defaultPath);
+            byte[] body = Files.readAllBytes(new File("./webapp"+defaultPath).toPath());
+            urlFunction(requestPath, dos, params, body);
+             }
+            } catch(Exception e){
+            e.printStackTrace();
+
+        }
+    }
+    private void response200Header(DataOutputStream dos, int lengthOfBodyContent) {
+        try {
+            dos.writeBytes("HTTP/1.1 200 OK \r\n");
+            dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+            dos.writeBytes("Content-Length: " + lengthOfBodyContent + "\r\n");
+            dos.writeBytes("\r\n");// 웹은 헤더와 body를 구분할 때 \r\n\r\n로 구분함
+        } catch (IOException e) {
+            log.error(e.getMessage());
+        }
+    }
+
+    private void response302Header(DataOutputStream dos, int lengthOfBodyContent) {
+        try {
+            dos.writeBytes("Http/1.1 302 OK \r\n");
+            dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+            dos.writeBytes("Content-Length: "+lengthOfBodyContent+"\r\n");
+            dos.writeBytes("\r\n");
+        }catch(IOException e){
+            log.error(e.getMessage());
+        }
+    }
+    private void responseBody(DataOutputStream dos, byte[] body) {
+        try {
+            dos.write(body, 0, body.length);
+            dos.flush();
+        } catch (IOException e) {
+            log.error(e.getMessage());
+        }
+    }
+
+    private void urlFunction(String requestPath, DataOutputStream dos, String params, byte[] body){
+        if("/user/create".equals(requestPath)) {    
+            if (params==null) {
+                response302Header(dos, body.length);
+                responseBody(dos, body);
+            }
+            else{
+                String[] info=params.split("&");
+                String[] acc = new String[4];
+                for(int i=0; i<info.length;i++){
+                    String[] value = info[i].split("=");
+                    acc[i]=value[1];
+                }
+                User user = new User(acc[0],acc[1],acc[2],acc[3]);
+                response302Header(dos,body.length);
+                responseBody(dos, body);
+            }
+        }
+        else{
+            response200Header(dos, body.length);
+            responseBody(dos, body);
+        }
+    }
+}
+```
