--- a/요구사항1정리노트1.md
+++ b/요구사항1정리노트1.md
@@ -190,7 +190,7 @@ GET /user/create?userID=testID&password=testPW&name=testName&email=test%40test H
 ? 뒤에 오는 사용자 정보는 추출하여 model.User 클래스에 저장한다 <br>
 
 그리고 HTTP 요청을 보면 알겠지만 우선 /user/create가 있는지 찾아야 한다. 하지만 /user/create로는 응답할 페이지가 없기 때문에 
-리다이렉트 하는 코드를 작성해주어야 한다 리다이렉트 하는 상황에 대한 302 헤더도 클라이언트로 보내야 한다. 해당 부분은 RequestHandler.java에서 구현해주었다
+index/html으로 페이지 이동 하는 코드를 작성해주어야 한다 리다이렉트 하는 상황에 대한 302 헤더도 클라이언트로 보내야 한다. 해당 부분은 RequestHandler.java에서 구현해주었다
 
 - RequestHandler.java
 ```
@@ -280,12 +280,9 @@ public class RequestHandler extends Thread{
     }
 
     private void urlFunction(String requestPath, DataOutputStream dos, String params, byte[] body){
-        if("/user/create".equals(requestPath)) {    
-            if (params==null) {
-                response302Header(dos, body.length);
-                responseBody(dos, body);
-            }
-            else{
+        if("/user/create".equals(requestPath)) {
+//리펙토링 필요한 부분이라 생각 /user/create 뿐만 아닌 다른 없는 페이지에 대해서도 수행할 수 있어야함
+            try{//올바르게 입력되었으면
                 String[] info=params.split("&");
                 String[] acc = new String[4];
                 for(int i=0; i<info.length;i++){
@@ -293,14 +290,232 @@ public class RequestHandler extends Thread{
                     acc[i]=value[1];
                 }
                 User user = new User(acc[0],acc[1],acc[2],acc[3]);
+                response200Header(dos,body.length);
+                responseBody(dos, body);
+            }catch(Exception e){
+                e.printStackTrace();
                 response302Header(dos,body.length);
                 responseBody(dos, body);
             }
         }
         else{
-            response200Header(dos, body.length);
+            response302Header(dos, body.length);
             responseBody(dos, body);
         }
     }
 }
 ```
+
+## ※ 두서 없음 주의
+잘 구현한줄 알았으나 알고보니 페이지 내용만 index/html일 뿐 아래 사진 처럼 주소가 이동되지는 않았다
+
+<br>
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/3a9b7dc7-89d8-43f6-b1c3-c99f746c07fa)
+
+<br>
+
+요청하는 페이지가 없을 때 응답 메시지 body 부분에 index/html의 내용을 보냈지만 ServerSocket 스트림에 저장되어 있는 주소는
+/user/create....였다. 따라서 기존에 연결 되어 있던 소켓을 종료하고 Redirector.java를 구현해 /index.html로 페이지 이동을 하려고 하였다.
+
+- RequestHandler.java(Redirector.java 구현 후)
+```
+package webserver;
+
+import model.User;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import util.HttpRequestUtils;
+
+import java.io.*;
+import java.net.ServerSocket;
+import java.net.Socket;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+
+public class RequestHandler extends Thread{
+    private static final Logger log = LoggerFactory.getLogger(RequestHandler.class);
+    private Socket connection;
+
+    public RequestHandler(Socket connectionSocket){
+        this.connection=connectionSocket;
+    }
+
+    @Override
+    public void run(){
+        log.debug("New Client Connect! Connected IP {}, PORT : {}",connection.getInetAddress(),connection.getPort());
+        try(InputStream in = connection.getInputStream();
+            OutputStream out = connection.getOutputStream())
+        {
+            InputStreamReader isr = new InputStreamReader(in,"UTF-8");
+            BufferedReader br = new BufferedReader(isr);
+            String url = HttpRequestUtils.getUrl(br.readLine());
+            String defaultPath="http://localhost:8080/index.html";
+            int index = url.indexOf("?");
+            String requestPath;
+            String params;
+            if (index==-1){
+             requestPath=url;
+             params="";
+            }
+            else {
+                requestPath = url.substring(0, index);
+                params = url.substring(index + 1);
+            }
+            DataOutputStream dos = new DataOutputStream(out);
+            log.debug("File exists:{}",Files.exists( Paths.get("./webapp"+requestPath)));
+            if (Files.exists( Paths.get("./webapp"+requestPath))){
+            byte[] body = Files.readAllBytes(new File("./webapp"+requestPath).toPath());
+            urlFunction(requestPath,dos,params,body);
+            }
+            else{ //리다이렉트 부분
+                log.debug("there is no Path about {}",requestPath);
+                /*connection= new Socket("http://localhost:8080/index.html",8080);
+                OutputStream out2 = connection.getOutputStream();
+                DataOutputStream dos2 = new DataOutputStream(out2);*/
+             connection.close(); //소켓 종료
+             join();            //현재 스레드 무한정 대기
+            Redirector toDefault = new Redirector(defaultPath,8080);
+            toDefault.connect();
+
+             }
+            } catch(Exception e){
+            e.printStackTrace();
+
+        }
+    }
+    private void response200Header(DataOutputStream dos, int lengthOfBodyContent) {
+        try {
+            dos.writeBytes("HTTP/1.1 200 OK \r\n");
+            dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+            dos.writeBytes("Content-Length: " + lengthOfBodyContent + "\r\n");
+            dos.writeBytes("\r\n");// 웹은 헤더와 body를 구분할 때 \r\n\r\n로 구분함
+        } catch (IOException e) {
+            log.error(e.getMessage());
+        }
+    }
+
+    private void response302Header(DataOutputStream dos, int lengthOfBodyContent) {
+        try {
+            dos.writeBytes("Http/1.1 302 error \r\n");
+            dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+            dos.writeBytes("Content-Length: "+lengthOfBodyContent+"\r\n");
+            dos.writeBytes("\r\n");
+        }catch(IOException e){
+            log.error(e.getMessage());
+        }
+    }
+    private void responseBody(DataOutputStream dos, byte[] body) {
+        try {
+            dos.write(body, 0, body.length);
+            dos.flush();
+        } catch (IOException e) {
+            log.error(e.getMessage());
+        }
+    }
+
+    private void urlFunction(String requestPath, DataOutputStream dos, String params, byte[] body){
+        if("/user/create".equals(requestPath)) {
+            try{
+                String[] info=params.split("&");
+                String[] acc = new String[4];
+                for(int i=0; i<info.length;i++){
+                    String[] value = info[i].split("=");
+                    acc[i]=value[1];
+                }
+                User user = new User(acc[0],acc[1],acc[2],acc[3]);
+                response200Header(dos,body.length);
+                responseBody(dos, body);
+            }catch(Exception e){
+                e.printStackTrace();
+                response302Header(dos,body.length);
+                responseBody(dos, body);
+            }
+        }
+        else{
+            response302Header(dos, body.length);
+            responseBody(dos, body);
+        }
+    }
+}
+```
+
+- Redirector.java
+```
+package webserver;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.*;
+import java.net.ServerSocket;
+import java.net.Socket;
+import java.nio.file.Files;
+
+public class Redirector {
+    private final int port;
+    private final String readd;
+    public Redirector(String readd, int port){
+        this.readd=readd;
+        this.port=port;
+    }
+    private static final Logger logger = LoggerFactory.getLogger(Redirector.class);
+    public void connect(){
+        try(ServerSocket server = new ServerSocket(port)){
+            logger.debug("redirect to default page");
+            Socket socket;
+            while((socket=server.accept())!=null){
+                RedirectThread r = new RedirectThread(socket);
+                r.start();
+            }
+        } catch(Exception e)
+        {
+            e.printStackTrace();
+        }
+    }
+    public class RedirectThread extends Thread{
+        Socket connection;
+        RedirectThread(Socket s){
+            this.connection = s;
+        }
+        @Override
+        public void run(){
+            try{
+                OutputStream os = connection.getOutputStream();
+                DataOutputStream dos = new DataOutputStream(os);
+                byte[] body = Files.readAllBytes(new File("./webapp/index.html").toPath());
+                response302Header(dos,body.length);
+                responseBody(dos, body);
+            }catch(Exception e)
+            {
+                e.printStackTrace();
+            }
+        }
+        private void response302Header(DataOutputStream dos, int lengthOfBodyContent) {
+            try {
+                dos.writeBytes("Http/1.1 302 error \r\n");
+                dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+                dos.writeBytes("Content-Length: "+lengthOfBodyContent+"\r\n");
+                dos.writeBytes("\r\n");
+            }catch(IOException e){
+                e.printStackTrace();
+            }
+        }
+        private void responseBody(DataOutputStream dos, byte[] body) {
+            try {
+                dos.write(body, 0, body.length);
+                dos.flush();
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+
+    }
+}
+
+```
+
+하지만 위 코드를 실행했을 때 Exception in thread "main" java.net.BindException: Address already in use: bind 오류가 발생하였고
+Socket을 종료해줬어도 RequestHandler 동작을 할 때 연결했던 ServerSocket이 종료가 안되어있어서 바인딩 오류가 발생했다.
+
+구현 자체가 꼬인 듯 해서 해당 방법은 중단하고 response 헤더에 있는 정보를 참고했는데 location 정보가 있었고 302 메시지를 작성할 때 location을 추가해보기로 했다(리다이렉트 할 필요 없는 페이지에 대해서는 문제 없던 부분이라 의심해볼 생각을 못했다)
