--- a/요구사항1정리노트1.md
+++ b/요구사항1정리노트1.md
@@ -519,3 +519,22 @@ public class Redirector {
 Socket을 종료해줬어도 RequestHandler 동작을 할 때 연결했던 ServerSocket이 종료가 안되어있어서 바인딩 오류가 발생했다.
 
 구현 자체가 꼬인 듯 해서 해당 방법은 중단하고 response 헤더에 있는 정보를 참고했는데 location 정보가 있었고 302 메시지를 작성할 때 location을 추가해보기로 했다(리다이렉트 할 필요 없는 페이지에 대해서는 문제 없던 부분이라 의심해볼 생각을 못했다)
+
+RequestHandler.java의 response302Header 메서드에 아래 코드를 추가한다
+```
+dos.writeBytes("location: http://localhost:8080/index.html"+"\r\n"); 
+```
+
+그리고 Http 302 메시지는 found이므로 수정해준다
+```
+dos.writeBytes("Http/1.1 302 found \r\n");
+```
+
+수정 해주고 나서 회원가입 폼에 정보를 입력하고 회원가입을 눌러주면 
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/01eaee16-7112-4823-9b88-ff910ff59d73)
+
+/index.html로 페이지 이동이 되면서
+
+그에따른 응답 헤더도
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/fbce80b6-c6f1-4765-adb1-12d2871953fe)
+의도한대로 잘 도착한 것을 알 수 있다
