--- a/요구사항1-1~1-4정리노트1.md
+++ b/요구사항1-1~1-4정리노트1.md
@@ -1,3 +1,18 @@
+# 요구사항 구현을 위해 공부한 것, 알게된 것
+- 큰주제
+  - 스트림 입출력
+    - https://github.com/kdfasdf/TIL/blob/main/Java/%EC%9E%90%EB%B0%94%EC%9D%98%20%EC%9E%85%EC%B6%9C%EB%A0%A5%EA%B3%BC%20%EC%8A%A4%ED%8A%B8%EB%A6%BC.md
+  - 스레드 
+    - https://github.com/kdfasdf/TIL/blob/main/Java/%EC%8A%A4%EB%A0%88%EB%93%9C%20%EA%B8%B0%EC%B4%88(%EB%8F%99%EA%B8%B0%ED%99%94%20%EC%9D%B4%EC%A0%84).md
+  - 네트워크 입출력
+    - 예정
+  - HTTP 상태정보 정리
+    - 
+- 작은 주제
+  - HTTP 메시지에서 header와 body가 무엇을 기준으로 구분되는지
+  - 리다이렉트 vs 포워딩
+  - HTTP 302 리다이렉트 헤더 
+
 ## 요구사항 1-1 - http://localhost:8080/index.html로 접속시 응답
 
 웹에서 클라이언트가 주소창에 특정 도메인이나 IP를 입력하면  특정 도메인에 대응되는 IP주소를 찾아
@@ -537,4 +552,5 @@ dos.writeBytes("Http/1.1 302 found \r\n");
 
 그에따른 응답 헤더도
 ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/fbce80b6-c6f1-4765-adb1-12d2871953fe)
+
 의도한대로 잘 도착한 것을 알 수 있다
