--- a/요구사항1-1~1-4정리노트1.md
+++ b/요구사항1-1~1-4정리노트1.md
@@ -13,7 +13,7 @@
   - 리다이렉트 vs 포워딩
   - HTTP 302 리다이렉트 헤더 
 
-## 요구사항 1-1 - http://localhost:8080/index.html로 접속시 응답
+## 요구사항 1-1 - http://localhost:8080/index.html로 접속시 응답 요구사항 1-4 302 status code 적용
 
 웹에서 클라이언트가 주소창에 특정 도메인이나 IP를 입력하면  특정 도메인에 대응되는 IP주소를 찾아
 특정 서버와 브라우저를 연결한다.
