--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -78,7 +78,7 @@ public class RequestHandler extends Thread{
                 String user = IOUtils.readData(br,contentLength);
                                                                       //post 요청 body 읽기
                                                                       //user 변수에 회원 가입 폼에 입력했던 데이터가 저장된다
-                urlFunction(requestPath, dos, user, body);
+                urlFunction(requestPath, dos, user, body);            //회원가입 진행
             }
         } catch(Exception e){
             e.printStackTrace();
@@ -127,8 +127,8 @@ public class RequestHandler extends Thread{
                     acc[i]=value[1];
                 }
                 User user = new User(acc[0],acc[1],acc[2],acc[3]);
-                log.debug("id: {} pw: {} name: {} email: {}",acc[0],acc[1],acc[2],acc[3]);
-                response302Header(dos,body.length);
+                log.debug("new account|id: {} pw: {} name: {} email: {}",acc[0],acc[1],acc[2],acc[3]);
+                response302Header(dos,body.length);        //index.html로 리다이렉트
                 responseBody(dos, body);
             }catch(Exception e){
                 e.printStackTrace();
@@ -174,3 +174,12 @@ public class IOUtils {
 }
 ```
 
+이후 urlFunction 함수에 의해 회원가입을 진행하게 된다
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/ca0573e9-a0fa-4744-b508-4aa1ed3eb0de)
+
+
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/3057e221-51f0-4e2b-9c94-6ff41fdaee33)
+
+로그가 문제 없이 출력되는 것으로 보아 회원가입이 정상적으로 된 것을 알 수 있다.
