요구사항 1-6까지

--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -1,6 +1,25 @@
+# 요구사항 구현을 위해 공부한 것, 알게된 것
+
+## 요구사항 1-3 POST 방식으로 회원가입하기
+저번 요구사항에서 GET 방식으로 회원가입하는 것 까지 진행하였다. 이번에는 POST 방식으로 회원가입 기능을 구현해보겠다.
+웹에서는 기본적으로 서버에 요청을 보낼 때 HTTP 요청 메서드를 따로 명시하지 않으면 GET을 기본 메서드로 사용한다.
+
+회원 가입을 할 때 user/form.html 페이지에서 사용자 정보 입력 란에 정보를 입력하고 회원가입을 하면 HTTP 요청 메시지가 서버에 날아가게 된다.
+일반적으로 웹 페이지에서 입력란을 만들 때 form 태그를 사용한다 form 태그를 정의할 때 HTTP 방식을 정해줄 수 있다
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/ebb869db-1f0e-4acb-8a8a-837d4701d4db)
+
+form 태그의 메서드 부분을 "post"로 바꿔주면 post 방식으로 HTTP 요청을 보낼 수 있다.(참고로 method 방식 속성을 안적어주면 GET으로 요청이 날아간다)
+<br>
+<br><br>
+
+저번 요구사항 1-1을 하면서 HTTP 응답 메시지를 작성할 때 헤더와 메시지가 "\r\n\r\n"으로 구분된다는 것을 알았다.
+따라서 이번에는 header 부분을 한번만 읽는 것이 아닌 body 부분까지 읽어야 한다
+
+- requestHandler
+```
 package webserver;
 
-import db.DataBase;
 import model.User;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -11,7 +30,6 @@ import java.io.*;
 import java.net.Socket;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 
 public class RequestHandler extends Thread{
     private static final Logger log = LoggerFactory.getLogger(RequestHandler.class);
@@ -49,7 +67,7 @@ public class RequestHandler extends Thread{
             else{                                         //없는 경우 기본 페이지인 index.html 페이지를 응답으로 보낸다
                 log.debug("defaultPath{}",defaultPath);
                 byte[] body = Files.readAllBytes(new File("./webapp"+defaultPath).toPath());
-                //post 요청 body 읽기;
+                                                                      //post 요청 body 읽기
                 int contentLength=0;
                 while(!line.equals("")){
                     line=br.readLine();
@@ -58,8 +76,9 @@ public class RequestHandler extends Thread{
                     }
                 }
                 String user = IOUtils.readData(br,contentLength);
-                //post 요청 body 읽기
-                urlFunction(requestPath, dos, user, body);
+                                                                      //post 요청 body 읽기
+                                                                      //user 변수에 회원 가입 폼에 입력했던 데이터가 저장된다
+                urlFunction(requestPath, dos, user, body);            //회원가입 진행
             }
         } catch(Exception e){
             e.printStackTrace();
@@ -73,24 +92,6 @@ public class RequestHandler extends Thread{
             dos.writeBytes("Content-Length: " + lengthOfBodyContent + "\r\n");
             dos.writeBytes("\r\n");// 웹은 헤더와 body를 구분할 때 \r\n\r\n로 구분함
         } catch (IOException e) {
-            log.error(e.getMessage());
-        }
-    }
-
-    private void response200LoginHeader(DataOutputStream dos, int lengthOfBodyContent, User loginUser) {
-        try {
-            if (loginUser != null)
-            {
-                dos.writeBytes("HTTP/1.1 302 OK \r\n");
-                dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
-                dos.writeBytes("location: http://localhost:8080/index.html"+"\r\n");
-                dos.writeBytes("Cookie: logined=true\r\n");
-                dos.writeBytes("Set-cookie: logined=true\r\n");
-                dos.writeBytes("Content-Length: " + lengthOfBodyContent + "\r\n");
-                dos.writeBytes("\r\n");// 웹은 헤더와 body를 구분할 때 \r\n\r\n로 구분함//
-                }
-
-        } catch (Exception e) {
             log.error(e.getMessage());
         }
     }
@@ -119,29 +120,20 @@ public class RequestHandler extends Thread{
         if("/user/create".equals(requestPath)) {
 //리펙토링 필요한 부분이라 생각 /user/create 뿐만 아닌 다른 없는 페이지에 대해서도 수행할 수 있어야함
             try{//올바르게 입력되었으면
+                String[] info=params.split("&");
                 String[] acc = new String[4];
-                acc=parseParam(params);
-                DataBase.addUser(new User(acc[0],acc[1],acc[2],acc[3]));
+                for(int i=0; i<info.length;i++){
+                    String[] value = info[i].split("=");
+                    acc[i]=value[1];
+                }
+                User user = new User(acc[0],acc[1],acc[2],acc[3]);
                 log.debug("new account|id: {} pw: {} name: {} email: {}",acc[0],acc[1],acc[2],acc[3]);
-                response302Header(dos,body.length);
+                response302Header(dos,body.length);        //index.html로 리다이렉트
                 responseBody(dos, body);
             }catch(Exception e){
                 e.printStackTrace();
                 response302Header(dos,body.length);
                 responseBody(dos, body);
-            }
-        }
-        else if("/user/login".equals(requestPath)){
-            String[] acc = new String[4];
-            acc=parseParam(params);
-            User loginUser = DataBase.findUserById(acc[0]);
-            log.debug("id: {}",loginUser.getUserId());
-            try {
-                response200LoginHeader(dos,body.length,loginUser);
-                responseBody(dos,body);
-            } catch(Exception e)
-            {
-                e.printStackTrace();
             }
         }
         else{
@@ -150,17 +142,44 @@ public class RequestHandler extends Thread{
         }
     }
 
-    private String[] parseParam(String params){
-        String[] acc = new String[4];
-        String[] info=params.split("&");
-        for(int i=0; i<info.length;i++){
-            String[] value = info[i].split("=");
-            acc[i]=value[1];
-        }
-        return acc;
-    }
     private int getContentLength(String line){
         String[] header = line.split(":");
         return Integer.parseInt(header[1].trim());
     }
 }
+```
+헤더 부분에서 Content-Length가 나오면 본문의 길이를 저장해두고 IOUtils에 구현되어 있는 readData 메서드를 이용해 본문의 내용을 읽어온다
+
+- IOUtils.java
+```
+package util;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+
+public class IOUtils {
+    /**
+     * @param BufferedReader는
+     *            Request Body를 시작하는 시점이어야
+     * @param contentLength는
+     *            Request Header의 Content-Length 값이다.
+     * @return
+     * @throws IOException
+     */
+    public static String readData(BufferedReader br, int contentLength) throws IOException {
+        char[] body = new char[contentLength];
+        br.read(body, 0, contentLength);
+        return String.copyValueOf(body);
+    }
+}
+```
+
+이후 urlFunction 함수에 의해 회원가입을 진행하게 된다
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/ca0573e9-a0fa-4744-b508-4aa1ed3eb0de)
+
+
+
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/3057e221-51f0-4e2b-9c94-6ff41fdaee33)
+
+로그가 문제 없이 출력되는 것으로 보아 회원가입이 정상적으로 된 것을 알 수 있다.
