--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -183,3 +183,31 @@ public class IOUtils {
 ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/3057e221-51f0-4e2b-9c94-6ff41fdaee33)
 
 로그가 문제 없이 출력되는 것으로 보아 회원가입이 정상적으로 된 것을 알 수 있다.
+
+## 요구사항 5 - 로그인 하기
+로그인 하기의 요구사항을 정리하자면 아래와 같다
+- "로그인" 메뉴를 클릭하면 http://localhost:8080/user/login.html으로 이동
+- 로그인 폼에 로그인해서 성공하면 /index.html
+- 로그인 실패하면 /user/login_failed.html로 이동
+
+- 힌트
+  - 응답 헤더의 예시
+    ```
+    HTTP/1.1 200 OK   //잘못된 힌트
+    Content-Type: text/html
+    Set-Cookie: logined=true
+    ```
+  - 요청 헤더의 예시
+    ```
+    Get /index.html HTTP/1.1
+    Host: localhost:8080
+    ...
+    Cookie: logined=true
+    ```
+
+책의 힌트에서는 응답헤더의 예시가 200이었지만 로그인 성공이나 실패시 페이지 리다이렉트가 필수인 상황이었다. 200코드로 가눙 규횬울 하고 실행했는데 의도한대로 웹이 동작하지 않았다. 처음에는 200이나 200번대로 리다이렉트를 하는 방법이 있는지
+검색해보기 시작했다. 이전 get과 post 방식의 회원가입을 구현할 때 처럼 300번대 HTTP 코드를 사용해야할 것 같았고 아무리 검색해봐도 300번대의 코드로 리다이렉트를 하는 것이 정답이었다. 그래서 저자 깃허브랑 유튜브 영상을 찾아보는데 책에 힌트가 잘못 소개된 것이 맞았다.
+
+
+
+
