--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -208,6 +208,104 @@ public class IOUtils {
 책의 힌트에서는 응답헤더의 예시가 200이었지만 로그인 성공이나 실패시 페이지 리다이렉트가 필수인 상황이었다. 200코드로 가눙 규횬울 하고 실행했는데 의도한대로 웹이 동작하지 않았다. 처음에는 200이나 200번대로 리다이렉트를 하는 방법이 있는지
 검색해보기 시작했다. 이전 get과 post 방식의 회원가입을 구현할 때 처럼 300번대 HTTP 코드를 사용해야할 것 같았고 아무리 검색해봐도 300번대의 코드로 리다이렉트를 하는 것이 정답이었다. 그래서 저자 깃허브랑 유튜브 영상을 찾아보는데 책에 힌트가 잘못 소개된 것이 맞았다.
 
+<br>
+
+새로 구현 해준 부분은 아래와 같다
+- RequestHandelr
+  - response302LoginFail
+    - 로그인 실패시 login_failed로 이동, 쿠키 관련 헤더 login = false
+
+    ```
+    private void response302LoginFail(DataOutputStream dos, int lengthOfBodyContent) {
+            try {
+                    dos.writeBytes("HTTP/1.1 302 OK \r\n");
+                    dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+                    dos.writeBytes("location: http://localhost:8080/login_failed.html"+"\r\n");
+                    dos.writeBytes("Cookie: logined=false\r\n");
+                    dos.writeBytes("Set-cookie: logined=false\r\n");
+                    dos.writeBytes("Content-Length: " + lengthOfBodyContent + "\r\n");
+                    dos.writeBytes("\r\n");// 웹은 헤더와 body를 구분할 때 \r\n\r\n로 구분함
+            } catch (Exception e) {
+                log.error(e.getMessage());
+            }
+        }
+      ```
+  - response302LoginHeader
+    - 로그인 성공 시 index.html로 이동, 쿠키 관련 헤더 login = true
+      ```
+      private void response302LoginHeader(DataOutputStream dos, int lengthOfBodyContent, User loginUser) {
+        try {
+            if (loginUser != null)
+            {
+                dos.writeBytes("HTTP/1.1 302 OK \r\n");
+                dos.writeBytes("Content-Type: text/html;charset=utf-8\r\n");
+                dos.writeBytes("location: http://localhost:8080/index.html"+"\r\n");
+                dos.writeBytes("Cookie: logined=true\r\n");
+                dos.writeBytes("Set-cookie: logined=true\r\n");
+                dos.writeBytes("Content-Length: " + lengthOfBodyContent + "\r\n");
+                dos.writeBytes("\r\n");// 웹은 헤더와 body를 구분할 때 \r\n\r\n로 구분함//
+                }
+        } catch (Exception e) {
+            log.error(e.getMessage());
+        }
+    }
+      ```
+
+  - urlFunction
+    - urlFunction에 로그인 기능 추가
+
+    ```
+        private void urlFunction(String requestPath, DataOutputStream dos, String params, byte[] body){
+        if("/user/create".equals(requestPath)) {//리펙토링 필요한 부분이라 생각 /user/create 뿐만 아닌 다른 없는 페이지에 대해서도 수행할 수 있어야함
+            try{//올바르게 입력되었으면
+                String[] acc = new String[4];
+                acc=parseParam(params);
+                DataBase.addUser(new User(acc[0],acc[1],acc[2],acc[3]));
+                log.debug("new account|id: {} pw: {} name: {} email: {}",acc[0],acc[1],acc[2],acc[3]);
+                response302Header(dos,body.length);
+                responseBody(dos, body);
+            }catch(Exception e){
+                e.printStackTrace();
+                response302Header(dos,body.length);
+                responseBody(dos, body);
+            }
+        }
+        else if("/user/login".equals(requestPath)){  //로그인 기능 수행 부분
+            String[] acc = new String[4];
+            acc=parseParam(params);
+            User loginUser = DataBase.findUserById(acc[0]);
+            try {
+                log.debug("id: {}", loginUser.getUserId());    //로그인 시도 계정이 가입된 계정인지 확인해보고 없으면 NullPointerException으로 넘김 
+                response302LoginHeader(dos,body.length,loginUser);
+                responseBody(dos,body);
+            }
+            catch(Exception e){            //가입되지 않은 계정이라면 login_failed.html로 넘어감
+                e.printStackTrace();
+                try {
+                    byte[] loginfail=Files.readAllBytes(new File("./webapp"+"/user/login_failed.html").toPath());
+                    response302LoginFail(dos,loginfail.length);
+                    responseBody(dos,loginfail);
+
+               } catch(Exception ie)
+                {
+                ie.printStackTrace();
+                }
+            }
+        }
+        else{
+            response200Header(dos,body.length);
+            responseBody(dos, body);
+        }
+    }
+    ```
+- 가입 된 계정 test로 로그인 시도 시
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/61e056f5-aee0-450a-9d70-20db4f6770b0)
+
+- 가입되지 않은 계정 1로 로그인 시도 시
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/627eb65f-b3d6-48d1-ad93-c32bced8bd17)
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/73670ba3-dde8-4678-a477-eb15da83233d)
+
+login failed로 이동
 
 
 
