--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -1,11 +1,11 @@
 # 요구사항 구현을 위해 공부한 것, 알게된 것
 
 ## 요구사항 1-3 POST 방식으로 회원가입하기
-저번 요구사항에서 GET 방식으로 회원가입하는 것 까지 진행하였다. 이번에는 POST 방식으로 회원가입 기능을 구현해보겠다.
-웹에서는 기본적으로 서버에 요청을 보낼 때 HTTP 요청 메서드를 따로 명시하지 않으면 GET을 기본 메서드로 사용한다.
+저번 요구사항에서 GET 방식으로 회원가입하는 것 까지 진행하였다. 
+웹에서는 서버에 요청을 보낼 때 기본적으로 GET 방식으로 요청을 보낸다. 구현할 웹 기능에 따라 메서드 방식을 다르게 할 필요가 있는데
+이번에는 POST 방식으로 회원가입을 구현해보자.
 
-회원 가입을 할 때 user/form.html 페이지에서 사용자 정보 입력 란에 정보를 입력하고 회원가입을 하면 HTTP 요청 메시지가 서버에 날아가게 된다.
-일반적으로 웹 페이지에서 입력란을 만들 때 form 태그를 사용한다 form 태그를 정의할 때 HTTP 방식을 정해줄 수 있다
+회원 가입을 할 때 입력 란으로 form 태그를 사용하였다. form 태그는 method 속성에서 Http 메서드 방식을 정해줄 수 있다.
 
 ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/ebb869db-1f0e-4acb-8a8a-837d4701d4db)
 
@@ -14,7 +14,8 @@ form 태그의 메서드 부분을 "post"로 바꿔주면 post 방식으로 HTTP
 <br><br>
 
 저번 요구사항 1-1을 하면서 HTTP 응답 메시지를 작성할 때 헤더와 메시지가 "\r\n\r\n"으로 구분된다는 것을 알았다.
-따라서 이번에는 header 부분을 한번만 읽는 것이 아닌 body 부분까지 읽어야 한다
+이번에는 회원 관련 정보가 body 부분에 담겨서 오므로 header 부분을 모두 읽어낸 후 IOUtils.readdata 메서드를 통해
+회원 정보를 읽어들였다
 
 - requestHandler
 ```
@@ -307,5 +308,17 @@ public class IOUtils {
 
 login failed로 이동
 
+## 1-7 요구사항 7 - CSS 지원하기
+1-6 사용자 목록 출력하기에서 기존 웹페이지에서는 css적용이 되지 않아 이미지 버튼이 생성이 안되었다.
+http 응답을 할 때 css 관련 응답을 추가해서 css를 적용하였다
 
+- response 관련 메서드들에 추가 
+```
+dos.writeBytes("Accept: text/css,*/*;q=0.1");
+```
 
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/660bb82b-c1d1-4c9f-874a-82af152fc328)
+
+## 1-6 요구사항 6 - 사용목록 출력
+이번 요구사항은 다음과 같다
+로그인 상태일 경우 로컬호스트/user/list로 접근했을 때 사용자 목록을 출력한다. 만약 로그인 하지 않은 상태라면 로그인 페이지로 이동한다
