--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -319,6 +319,136 @@ dos.writeBytes("Accept: text/css,*/*;q=0.1");
 
 ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/660bb82b-c1d1-4c9f-874a-82af152fc328)
 
-## 1-6 요구사항 6 - 사용목록 출력
+## 1-6 요구사항 6 - 사용자 목록 출력
 이번 요구사항은 다음과 같다
 로그인 상태일 경우 로컬호스트/user/list로 접근했을 때 사용자 목록을 출력한다. 만약 로그인 하지 않은 상태라면 로그인 페이지로 이동한다
+해당 기능 구현을 위해 우선 쿠키 상태가 유지되야 하므로 쿠키 응답 헤더에 MaxAge 속성을 추가해주었다
+
+- RequestHandler.java
+  - response302LoginHeader
+    ```
+                dos.writeBytes("Set-cookie: logined=true MaxAge=1800, HttpOnly;\r\n");
+    ```
+
+유저 목록을 눌렀을 때 /user/list.html 파일에 대한 요청을 처리해줘야 하므로 urlFunction에 /user.list.html 처리 부분을 추가해주었다.
+그리고 로그인 상태에 따라 동작이 다르기 때문에 run 메서드에서 request header를 읽어들일 때 쿠키에 관한 정보를 가져오는 부분 또한 추가하였다.
+파싱관련 메서드는 HttpRequestUtils에 구현되어있던 parseCookies 메서드를 이용하였다
+- HttpRequestUtils.java
+```
+ public static Map<String, String> parseCookies(String cookies) {
+        return parseValues(cookies, " ");
+    }
+
+    private static Map<String, String> parseValues(String values, String separator) {
+        if (Strings.isNullOrEmpty(values)) {
+            return Maps.newHashMap();
+        }
+
+        String[] tokens = values.split(separator);
+        return Arrays.stream(tokens).map(t -> getKeyValue(t, "=")).filter(p -> p != null)
+                .collect(Collectors.toMap(p -> p.getKey(), p -> p.getValue()));
+    }
+```
+
+- RequestHandler.java
+  - run
+    로그인 성공 시 클라이언트에서 보내는 요청메시지의 헤더부분을 로그로 찍어보니
+    Cookie: logined=true MaxAge=1800, HttpOnly; Idea-2bb6e6a0=4c5269c0-25d9-41a4-a3d9-b6d7dc5ce7e1 true Cookie:true
+    로 오는 것을 확인하였다. cookie에 로그인 성공 여부를 저장해야하기 떄문에 아래와 같이 헤더정보에서 로그인 성공 여부를 추출하였다
+    ```
+    boolean cookie=false;
+    while(!line.equals("")){
+                    line=br.readLine();
+                    if(line.contains("Cookie")){
+                        cookie=Boolean.parseBoolean(HttpRequestUtils.parseCookies(line.split(":")[1]).get("logined"));
+                        log.debug("{} \n{} Cookie:{}",line,HttpRequestUtils.parseCookies(line.split(":")[1]).get("logined"),cookie);
+                    }
+                }
+    ```     
+  - urlFunction
+    ```
+    else if("/user/list.html".equals(requestPath)){
+            if(cookie==false){                // 로그인이 실패했을 경우
+                try{
+                body = Files.readAllBytes(new File("./webapp/user/login.html").toPath());  //login.html로 리다이렉트
+
+                response302Relogin(dos,body.length);                          
+                responseBody(dos, body);
+                }catch(Exception re){
+                        re.printStackTrace();
+                }
+            }
+            else{                                            
+                Collection<User> users = DataBase.findAll();        //가입된 사용자를 저장
+                StringBuilder sb = new StringBuilder();            //웹페이지에 동적으로 테이블 생성
+                sb.append("<table border = '1'>");
+                for(User user :users){
+                    sb.append("<tr>");
+                    sb.append("<td>"+user.getUserId()+"</td>");
+                    sb.append("<td>"+user.getName()+"</td>");
+                    sb.append("<td>"+user.getEmail()+"</td>");
+                    sb.append("</tr>");
+                }
+                sb.append("</table>");
+                try{
+                byte[] userlist = sb.toString().getBytes();
+                response200Header(dos,userlist.length);
+                responseBody(dos,userlist);}catch(Exception a){a.printStackTrace();}{
+            }
+        }
+    ```
+
+우선 로그인을 하지 않은 상태에서 유저 목록을 보려고 하면 로그인 페이지로 리다이렉트 되는 것을 알 수 있다
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/9642eaac-2398-4332-a156-2116124c955a)
+
+로그인을 한 상태에서 유저 목록을 누르면 회원가입된 계정 정보가 동적으로 생성된 것을 볼 수 있다.
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/40adb1d8-b17a-44e6-9250-83f6227a8bda)
+
+
+
+## 후기, 공부해야할 것 
+아직 많이 한게 없지만 후기를 남겨보겠다
+처음에 학교에서 웹에 대한 아무 지식 없이 웹서버 프로그래밍을 시작했던 떄가 떠올랐다.
+아무것도 아는 게 없어 질문조차 만들어낼 수 없었고 알려줄 사람도 없어서 막막했던 기억이 남는다.
+마치 수영장 한가운데 수영 못하는사람 던져놓고 헤엄쳐서 올라와봐 하는 것과 비슷한 느낌이었다.
+구글링도 ~ 만드는 법 같이 프로덕트 단위 만드는 법 구글링하고, 이후에 프레임워크의 존재를 알게되서
+~하는법, ~보내는 법 등등 아주 원시적인 구글링으로 꾸역꾸역 진행했었던 것 같다. 그래도 정해진 기간동안 목표했던 만큼 만들어내어 뿌듯했었는데
+끝내고 나서 막연하게 나는 어떻게는 내가 원하는 프로젝트를 공부 해가면서 만들 수 있어라는 자신감이 생겼었다.
+(챗봇 만드는 프로젝트여서 지금에와서 생각해보면 정말 별거 없다.)
+
+<br>
+
+그리고 학교에서 산학공동프로젝트로 vue.js랑 스프링 기반의 웹 프로젝트를 진행하게 되었는데 앞에서 겪었던 어려움과는 근본적으로 다른 문제점이 느껴졌다.
+우선 나는 당시에 자바를 공부한 적이 없는 상황이었다. 그런데 교수님께서 원하는 진행속도가 있어서 매주마다 진도가 나갔어야 했었고 
+erd를 직접 짜서 데이터 베이스를 설계해보던가 네이버 클라우드 우분투 배포를 해본다던가 웹 개발의 가장 기본적인 crud를 구현한다던가 다양한 경험을 할 수 있었지만
+개발 실력 부분에 있어서는 밑빠진 독에 물 붓기 하는 느낌이었다.
+
+그래서 취준하는동안 웹 프로젝트를 시작한다면 자바공부를 하면서 스프링 프로젝트를 리펙토링 해볼 생각이었는데 프레임워크 리펙토링도 결국 프레임워크 위주로 
+웹을 공부하는게 아닌가 하는 생각이 들었다. 물론 프레임워크 위주로 공부해도 점점 깊이 들어가면 결국에 웹이나 자바에 대한 내용을 대부분 다루게 될 거라고 생각하지만 
+프레임워크으로 웹 개발 진행하면서 생겼던 아쉬움(기본기 부족)을 같은 방식으로 극복하려는 것은 앞 뒤가 안맞는 방식이라고 생각했다.
+
+그래서 박재성님의 자바 웹 프로그래밍 next step 책의 도움을 받아 스프링이나 서블릿 API 없이 웹서버 로그인, 회원가입 기능을 구현해보았다. 
+자바만으로 웹 서버를 구현해본 것은 의미있는 경험이었다. 스프링으로 프로젝트를 진행할 때 자바나 웹 등을 같이 공부하긴 했었는데 와닿지 않는 부분이 많았다.
+- 스레드 같은 경우 프레임워크에서 추상화 되어있는데 공부해나?
+- 로그를 왜 찍어야 하는지를 넘어선 존재에 대한 의문
+- 스트림 입출력 (대충 scanner만 쓰면 되는거 아닌가 하는 생각)
+- 람다 표현식 
+- HTTP 메시지 header와 body 구성(get은 파라미터로 보내고 post는 body에 담아보낸다 정도만 알고 넘어갔었다 그 이상 관심가지기 힘들었던 상황)
+등등...
+
+<br>
+
+요구사항을 구현하면서 이전에 혼자공부했을 때 쉽사리 넘어갔던 부분에 대해서 다시 읽어보고 고민해보고 생각해보는 계기가 되었다. 그리고 기능 구현하면서 코드가 복잡해져 몇몇 기능은 난이도에 비해
+오래걸렸다. 아직 공부하기에는 이르지만 클린코드에 대해서도 언젠가 공부할 필요성을 느꼈다.
+
+요구사항 진행을 하면서 앞으로 공부해야할 주제를 정리하며 후기를 마친다
+
+## 공부해야할 주제
+- HTTP 메서드,상태코드 정리
+  - GET 방식이 Idempotent하다는 키워드를 본적이 있는데 메서드 방식이나 상태코드나 자세하게 공부해볼 필요가 있겠다.
+- 네트워크 입출력
+  - 소켓이 통신할 때 스트림이 어떻게 활용되는지 정확하게 이해할 필요가 있겠다
+- 람다, 스트림
+  - 학교에서는 람다식을 쓸 일이 없어 계속 넘어갔지만 HttpRequestUtil의 파싱 메서드들이 람다 문법으로 구현되어 있었다
+    현업 개발에서는 많이 쓰이니 꼭 공부해야한다.
+등등
